[GTK] REGRESSION: Cumulative velocity for scrolling doesn't work https://bugs.webkit.org/show_bug.cgi?id=235507

Reviewed by Chris Lord.

ScrollAnimationKinetic can accumulate velocity from the previous scroll
animation. This relies on reusing the same animation every time, so it can
pick up the previous scroll data.

However, ScrollingEffectsController now creates and destroys ScrollAnimationKinetic
every time now, we can't rely on that.

Instead, save and propagate the data manually, same as the macOS port.

* platform/ScrollAnimationKinetic.cpp:
(WebCore::ScrollAnimationKinetic::startAnimatedScrollWithInitialVelocity):
(WebCore::ScrollAnimationKinetic::accumulateVelocityFromPreviousGesture):
* platform/ScrollAnimationKinetic.h:
* platform/ScrollingEffectsController.cpp:
(WebCore::ScrollingEffectsController::processWheelEventForKineticScrolling):
* platform/ScrollingEffectsController.h:



Canonical link: https://commits.webkit.org/247417@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290045 268f45cc-cd09-0410-ab3c-d52691b4dbfc